quitar logo espurio y actualizar redes

--- a/capacitacion-desarrollo.html
+++ b/capacitacion-desarrollo.html
@@ -109,6 +109,7 @@
                                 <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/CerberusConsulting.bsg" target="_blank"><i class="fa-brands fa-facebook-f"></i></a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.instagram.com/cerberusconsultingbsg/" target="_blank"><i class="fa-brands fa-instagram"></i></a></li>
                                 <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/company/cerberus-consulting-bsg/" target="_blank"><i class="fa-brands fa-linkedin-in"></i></a></li>
+                                <li class="nav-item"><a class="nav-link" href="https://www.tiktok.com/@cerberusconsulting/" target="_blank"> <i class="fa-brands fa-tiktok"></i></a></li>
                             </ul>
                         </div>
                     </div>
@@ -1042,12 +1043,12 @@
                             <li><a href="https://www.facebook.com/CerberusConsulting.bsg" class="social-icon" target="_blank"> <i class="fa-brands fa-facebook-f"></i></a></li>
                             <li><a href="https://www.instagram.com/cerberusconsultingbsg/" class="social-icon" target="_blank"> <i class="fa-brands fa-instagram"></i></a></li>
                             <li><a href="https://www.linkedin.com/company/cerberus-consulting-bsg/" class="social-icon" target="_blank"> <i class="fa-brands fa-linkedin-in"></i></a></li>
+                            <li><a href="https://www.tiktok.com/@cerberusconsulting/" class="social-icon" target="_blank"> <i class="fa-brands fa-tiktok"></i></a></li>
                         </ul>
                     </div>
                 </div>
                 <div class="row copyright">
                     <div class="col-md-6 col-xs-12 order-first order-md-2">
-                        <a href="https://lerco.mx/" target="_blank"><img src="/assets/img/logo_lerco.png" alt="Logo Lerco Agency" class="img-fluid d-block float-end px-3" srcset=""></a> 
                         <img src="/assets/img/logo_footer.png" alt="Logo Marketeros" class="img-fluid d-block float-end">
                     </div>
                     <div class="col-md-6 col-xs-12 order-last order-md-1">
