--- a/maquila-de-nomina-lp.html
+++ b/maquila-de-nomina-lp.html
@@ -107,7 +107,9 @@
                                     <input type="email" class="form-control" id="email" aria-describedby="emailHelp" placeholder="Correo electrónico*">
                                 </div>
                                 <div class="col-md-6">
-                                    <input type="number" class="form-control" id="phone" pattern="[0-9]{10}" maxlength="10" placeholder="Telefono*">
+                                    <!--<input type="number" class="form-control" id="phone" pattern="[0-9]{10}" maxlength="10" placeholder="Telefono*">-->
+                                    <input type="tel" class="form-control" id="phone" name="phone" placeholder="Teléfono*" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" required>
+                                    <small class="form-text">Ejemplo: 123-456-7890</small>
                                 </div>
                                 <div class="col-md-6">
                                     <input type="text" class="form-control" id="puesto" placeholder="Puesto*">
@@ -444,7 +446,7 @@
                   // Evita el envío del formulario
                   event.preventDefault();
                   // Muestra un mensaje de error
-                  alert("El dominio de correo electrónico no está permitido.");
+                  alert("Este dominio de correo electrónico no está permitido.\nPara ofrecerte un servicio adecuado, únicamente aceptamos correos corporativos.\nNo se permiten cuentas personales como Gmail, Hotmail, Outlook, Yahoo, entre otros");
                 }
                 else{
 
