--- a/capacitacion-desarrollo.html
+++ b/capacitacion-desarrollo.html
@@ -1005,8 +1005,8 @@
                         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3969.9229641033135!2d-98.22350517491542!3d19.053438215748045!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85cfc6d0eaaaaaa9%3A0x6b5ebba58a13c216!2sCerberus%20Consulting!5e0!3m2!1ses!2smx!4v1721531198021!5m2!1ses!2smx" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                         <h5><img src="/assets/img/icon-footer.png" class="img-fluid" alt="" srcset=""> PUEBLA</h5>
                         <ul class="contact-list">
-                            <li class="icon-map">Edificio Corporativo Premium Av. Juárez 2915, Piso 4 Oficina 401 Col. La Paz, C.P. 72160, Puebla, Pue.</li>
-                            <li class="icon-phone">Tel 52 +  (222) 8003 476</li>
+                            <li class="icon-map">Torre Ejecutiva Triángulo 39 Poniente 3515, piso 5, int. 537. Col. Las Ánimas, C.P. 72400. Puebla, Pue.</li>
+                            <li class="icon-phone">Tel 52 +  (222) 2265 282</li>
                         </ul>
                     </div>
                     <div class="col-md-3 px-3">
